<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/bg">

    <TextView
        android:id="@+id/score1"
        android:text="@string/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <ListView
        android:id="@+id/hardList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"/>


    <TextView
        android:id="@+id/score2"
        android:text="@string/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <ListView
        android:id="@+id/mediumList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />


    <TextView
        android:id="@+id/score3"
        android:text="@string/score3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <ListView
        android:id="@+id/easyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />


    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/play"
        android:background="@color/submit"/>

    <TextView
        android:id="@+id/username"
        android:text="@string/noUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>





</LinearLayout>
